--- a/PetShop/Views/_ViewImports.cshtml
+++ b/PetShop/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using PetShop
 @using PetShop.Data.Models;
 @using PetShop.Models
+@using PetShop.Web.ViewModels.Product;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
