--- a/PetShop/Views/Home/Index.cshtml
+++ b/PetShop/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@ btn-lg"
                      src="@house.ImageUrl" alt="@house.Name">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>
-                        <a class="btn btn-primary" asp-controller="House" aspaction="Details"
+                        <a class="btn btn-primary" asp-controller="Product" aspaction="Details"
                            asp-route-id="@house.Id"> @house.Name</a>
                     </h5>
                 </div>
