--- a/PetShop/Views/_ViewImports.cshtml
+++ b/PetShop/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using PetShop.Data.Models;
 @using PetShop.Models
 @using PetShop.Web.ViewModels.Product;
+@using PetShop.Web.ViewModels.Seller
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
