--- a/PetShop/Views/Shared/_ProductPartialType.cshtml
+++ b/PetShop/Views/Shared/_ProductPartialType.cshtml
@@ -12,11 +12,7 @@
             </h6>
             <br />
             <a asp-controller="Product" asp-action="Details" asp-route-id="@Model.Id"
-               class="btn btn-success">Details</a>
-            <a asp-controller="Product" asp-action="Delete" asp-route-id="@Model.Id"
-               class="btn btn-danger">Delete</a>
-            <a asp-controller="Product" asp-action="Edit" asp-route-id="@Model.Id"
-               class="btn btn-warning">Edit</a>
+               class="btn btn-info">Details</a>
         </div>
     </div>
 </div>
