Adding Delete functionality

--- a/PetShop/Views/AnimalType/All.cshtml
+++ b/PetShop/Views/AnimalType/All.cshtml
@@ -4,10 +4,8 @@
 <h2 class="text-center">@ViewBag.Title</h2>
 <hr />
 
-<div class="btn-group btn-group-lg">
-    <a class="btn btn-success btn-block" asp-controller="Product" asp-action="CatProducts">Products For Cats</a>
-    <a class="btn btn-info btn-block" asp-controller="Product" asp-action="DogProducts">Products For Dogs</a>
-    <a class="btn btn-warning btn-block" asp-controller="Product" asp-action="BirdProducts">Products For Birds</a>
-    <a class="btn btn-danger btn-block" asp-controller="Product" asp-action="FishProducts">Products For Fishes</a>
-    <a class="btn btn-primary btn-block" asp-controller="Product" asp-action="RodentProducts">Products For Rodents</a>
-</div>
+    <a class="btn btn-success col-lg-12 mb-4" asp-controller="Product" asp-action="CatProducts">Products For Cats</a>
+    <a class="btn btn-info col-lg-12 mb-4" asp-controller="Product" asp-action="DogProducts">Products For Dogs</a>
+    <a class="btn btn-warning col-lg-12 mb-4" asp-controller="Product" asp-action="BirdProducts">Products For Birds</a>
+    <a class="btn btn-danger col-lg-12 mb-4" asp-controller="Product" asp-action="FishProducts">Products For Fishes</a>
+    <a class="btn btn-primary col-lg-12" asp-controller="Product" asp-action="RodentProducts">Products For Rodents</a>
