--- a/PetShop/Views/Product/Details.cshtml
+++ b/PetShop/Views/Product/Details.cshtml
@@ -19,7 +19,7 @@
             <p>@Model.Description</p>
             <p>Category: <b>@Model.Category</b></p>
             <div class="form-inline">
-                @if (this.User.Identity.IsAuthenticated)
+                @if (this.User.Identity?.IsAuthenticated ?? false)
                 {
                     <a class="btn btn-warning" asp-controller="House" aspaction="Edit"
                        asp-route-id="@Model.Id">Edit</a>
