--- a/PetShop/Views/Shared/_Layout.cshtml
+++ b/PetShop/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="AnimalType" asp-action="All">All Product</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Search">Search Product</a>
+                            </li>
                         }
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
