--- a/PetShop/Views/Shared/_ProductPartial.cshtml
+++ b/PetShop/Views/Shared/_ProductPartial.cshtml
@@ -12,7 +12,9 @@
             </h6>
             <br />
             <a asp-controller="Product" asp-action="Details" asp-route-id="@Model.Id"
-               class="btn btn-success">Details</a>
+               class="btn btn-info btn-success">Details</a>
+            <a asp-controller="Product" asp-action="Buy" asp-route-id="@Model.Id"
+               class="btn btn-success">Buy</a>
             <a asp-controller="Product" asp-action="Delete" asp-route-id="@Model.Id"
                class="btn btn-danger">Delete</a>
             <a asp-controller="Product" asp-action="Edit" asp-route-id="@Model.Id"
