--- a/PetShop/Views/Shared/_ProductPartialType.cshtml
+++ b/PetShop/Views/Shared/_ProductPartialType.cshtml
@@ -13,6 +13,8 @@
             <br />
             <a asp-controller="Product" asp-action="Details" asp-route-id="@Model.Id"
                class="btn btn-info">Details</a>
+            <a asp-controller="Product" asp-action="Buy" asp-route-id="@Model.Id"
+               class="btn btn-success">Buy</a>
         </div>
     </div>
 </div>
