--- a/PetShop/Views/_ViewImports.cshtml
+++ b/PetShop/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
-﻿@using PetShop
+﻿@using PetShop;
 @using PetShop.Data.Models;
-@using PetShop.Models
+@using PetShop.Models;
 @using PetShop.Web.ViewModels.Product;
-@using PetShop.Web.ViewModels.Seller
+@using PetShop.Web.ViewModels.Seller;
+@using PetShop.Web.ViewModels.User;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
