--- a/PetShop/Views/Shared/_ProductBuyPartial.cshtml
+++ b/PetShop/Views/Shared/_ProductBuyPartial.cshtml
@@ -14,9 +14,8 @@
             <br />
             <a asp-controller="Product" asp-action="CartRemove" asp-route-id="@Model.Id"
                class="btn btn-success">Buy</a>
-            <form class="input-group-sm" asp-controller="Product" asp-action="CartRemove" asp-route-id="@Model.Id">
-                <input type="submit" value="Remove" class="fs-6 btn btn-success mb-3 p-2" />
-            </form>
+            <a asp-controller="Product" asp-action="CartRemove" asp-route-id="@Model.Id"
+               class="btn btn-info btn-success">Remove</a>
         </div>
     </div>
 </div>
