add new functionality for administrators

--- a/PetShop/Views/Shared/_ProductPartial.cshtml
+++ b/PetShop/Views/Shared/_ProductPartial.cshtml
@@ -28,9 +28,12 @@
             @if (isSeller)
             {
                 <a asp-controller="Product" asp-action="Delete" asp-route-id="@Model.Id"
-                   class="btn btn-danger">Delete</a>
-                <a asp-controller="Product" asp-action="Edit" asp-route-id="@Model.Id"
+                class="btn btn-danger">Delete</a>
+                if (User.IsUserAdmin())
+                {
+                    <a asp-controller="Product" asp-action="Edit" asp-route-id="@Model.Id"
                    class="btn btn-warning">Edit</a>
+                }
             }
         </div>
     </div>
