--- a/PetShop/Views/Shared/_Layout.cshtml
+++ b/PetShop/Views/Shared/_Layout.cshtml
@@ -38,9 +38,12 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Mine">My Products</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Add">Add Product</a>
-                                </li>
+                                @if (User.IsUserAdmin())
+                                {
+                                    <li class="nav-item">
+                                        <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Add">Add Product</a>
+                                    </li>
+                                }
                             }
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="AnimalType" asp-action="All">All Product</a>
