Add ReCapcha in Log In and Register

--- a/PetShop/Views/User/Register.cshtml
+++ b/PetShop/Views/User/Register.cshtml
@@ -28,7 +28,7 @@
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
             <div class="text-center">
-                <input class="btn btn-primary mt-3" type="submit" value="Register" />
+                <recaptcha-v3 form-id="registerForm" action="submit" class="w-100 btn btn-lg btn-primary">Register</recaptcha-v3>
             </div>
         </form>
     </div>
