--- a/PetShop/Views/_ViewImports.cshtml
+++ b/PetShop/Views/_ViewImports.cshtml
@@ -4,4 +4,7 @@
 @using PetShop.Web.ViewModels.Product;
 @using PetShop.Web.ViewModels.Seller;
 @using PetShop.Web.ViewModels.User;
+@using Griesoft.AspNetCore.ReCaptcha
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Griesoft.AspNetCore.ReCaptcha
