--- a/PetShop/Views/Shared/_Layout.cshtml
+++ b/PetShop/Views/Shared/_Layout.cshtml
@@ -34,16 +34,13 @@
                     <ul class="navbar-nav flex-grow-1">
                         @if(this.User.Identity?.IsAuthenticated ?? false)
                         {
-                            @if(isSeller){
+                            @if(isSeller || User.IsUserAdmin()){
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Mine">My Products</a>
                                 </li>
-                                @if (User.IsUserAdmin())
-                                {
-                                    <li class="nav-item">
+                                <li class="nav-item">
                                         <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Add">Add Product</a>
                                     </li>
-                                }
                             }
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="AnimalType" asp-action="All">All Product</a>
