--- a/PetShop/Areas/Admin/Views/_ViewImports.cshtml
+++ b/PetShop/Areas/Admin/Views/_ViewImports.cshtml
@@ -4,6 +4,7 @@
 @using PetShop.Web.ViewModels.Product;
 @using PetShop.Web.ViewModels.Seller;
 @using PetShop.Web.ViewModels.User;
+@using PetShop.Areas.Admin.ViewModels;
 @using Griesoft.AspNetCore.ReCaptcha
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
