--- a/PetShop/Views/Shared/_Layout.cshtml
+++ b/PetShop/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Search">Search Product</a>
                             </li>
-                            @if(!isSeller){
+                            @if(!isSeller || User.IsUserAdmin()){
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="MyCart">My Cart</a>
                                 </li>
