--- a/PetShop/Areas/Admin/Views/Home/Index.cshtml
+++ b/PetShop/Areas/Admin/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <p class="lead mb-1 mt-3">
         This is your administrator area - you can <b>read</b>, <b>create</b>,
         <b>delete</b> and <b>edit</b> houses.
-        <br />You can also <b>buy</b> and <b>leave</b> the free ones, too!
+        <br />You can also <b>buy</b> and <b>pay</b> and <b>remove</b> from your cart!
     </p>
     <p class="lead mt-1">
         You can also see <b>all users and agents</b> and <b>all rents</b> in the system.
