Modifying all users view

--- a/PetShop/Areas/Admin/Views/User/All.cshtml
+++ b/PetShop/Areas/Admin/Views/User/All.cshtml
@@ -27,11 +27,11 @@
                     <td class="text-success"><label>@user.PhoneNumber</label></td>
                     @if (user.PhoneNumber != string.Empty)
                     {
-                        <td class="text-center"><label>✔</label></td>
+                        <td class="text-center text-success fw-bold"><label>Yes</label></td>
                     }
                     else
                     {
-                        <td class="text-center"><label>❌</label></td>
+                        <td class="text-center text-danger fw-bold"><label>No</label></td>
                     }
                     <td class="text-center"><label>✔</label></td>
                 }
@@ -41,11 +41,11 @@
                     <td class="text-danger"><label>@user.PhoneNumber</label></td>
                     @if (user.PhoneNumber != string.Empty)
                     {
-                        <td class="text-center"><label>✔</label></td>
+                        <td class="text-center text-success fw-bold"><label>Yes</label></td>
                     }
                     else
                     {
-                        <td class="text-center"><label>❌</label></td>
+                        <td class="text-center text-danger fw-bold"><label>No</label></td>
                     }
                     <td class="text-center"><label>❌</label></td>
                 }
