--- a/PetShop/Areas/Admin/Views/_ViewImports.cshtml
+++ b/PetShop/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,11 +1,9 @@
-﻿@using PetShop;
+﻿@*@using PetShop;
 @using PetShop.Data.Models;
 @using PetShop.Models;
 @using PetShop.Web.ViewModels.Product;
-@using PetShop.Web.ViewModels.Seller;
+@using PetShop.Web.ViewModels.Seller;*@
 @using PetShop.Web.ViewModels.User;
 @using PetShop.Areas.Admin.ViewModels;
-@using Griesoft.AspNetCore.ReCaptcha
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, Griesoft.AspNetCore.ReCaptcha
