--- a/PetShop/Areas/Admin/Views/Home/Index.cshtml
+++ b/PetShop/Areas/Admin/Views/Home/Index.cshtml
@@ -6,11 +6,11 @@
     <h2 class="display-4">Hello, Admin!</h2>
     <p class="lead mb-1 mt-3">
         This is your administrator area - you can <b>read</b>, <b>create</b>,
-        <b>delete</b> and <b>edit</b> houses.
+        <b>delete</b> and <b>edit</b> products.
         <br />You can also <b>buy</b> and <b>pay</b> and <b>remove</b> from your cart!
     </p>
     <p class="lead mt-1">
-        You can also see <b>all users and agents</b> and <b>all rents</b> in the system.
+        You can also see <b>all users and sellers</b> in the system.
     </p>
     <a class="btn btn-info col-lg-12 mb-4" asp-area="" asp-controller="Product" asp-action="Search">All Types Of Products</a>
     <a class="btn btn-info col-lg-12 mb-4" asp-area="" asp-controller="Product" asp-action="Add">Add Product</a>
