--- a/PetShop/Areas/Admin/Views/_ViewImports.cshtml
+++ b/PetShop/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,9 +1,4 @@
-﻿@*@using PetShop;
-@using PetShop.Data.Models;
-@using PetShop.Models;
-@using PetShop.Web.ViewModels.Product;
-@using PetShop.Web.ViewModels.Seller;*@
-@using PetShop.Web.ViewModels.User;
+﻿@using PetShop.Web.ViewModels.User;
 @using PetShop.Areas.Admin.ViewModels;
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
