--- a/PetShop/Views/Shared/_ProductPartial.cshtml
+++ b/PetShop/Views/Shared/_ProductPartial.cshtml
@@ -19,7 +19,7 @@
             <br />
             <a asp-controller="Product" asp-action="Details" asp-route-id="@Model.Id"
                class="btn btn-info btn-success">Details</a>
-            @if (!isSeller)
+            @if (!isSeller || User.IsUserAdmin())
             {
                 <a asp-controller="Product" asp-action="Buy" asp-route-id="@Model.Id"
                    class="btn btn-success">Buy</a>
@@ -29,7 +29,7 @@
             {
                 <a asp-controller="Product" asp-action="Delete" asp-route-id="@Model.Id"
                 class="btn btn-danger">Delete</a>
-                @if (User.IsUserAdmin())
+                @if (User.IsUserAdmin() || isSeller)
                 {
                     <a asp-controller="Product" asp-action="Edit" asp-route-id="@Model.Id"
                    class="btn btn-warning">Edit</a>
